# sql-splitter

./: .actrc  .dockerignore  .gitignore  .goreleaser.yaml  AGENTS.md  BENCHMARKS.md  CHANGELOG.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  OPTIMIZATION_RESULTS.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_ANALYSIS.md  README.md  SECURITY.md  build.rs  dist-workspace.toml  go.mod  justfile  main.go
.github/: dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docker.yml  publish.yml  release.yml  test.yml
benches/: convert_bench.rs  e2e_bench.rs  generate_bench.rs  parser_bench.rs  redact_bench.rs  sample_bench.rs  writer_bench.rs
benchmark-results/: generate-baseline.md
cmd/: analyze.go  root.go  split.go
crates/test_data_gen/: Cargo.toml
crates/test_data_gen/src/: fake.rs  generator.rs  lib.rs  renderer.rs  schema.rs  streaming.rs
docker/: Dockerfile.benchmark  benchmark-runner.sh  docker-compose.benchmark.yml  docker-compose.databases.yml  run-benchmark.sh  test-competitors.sh
docs/: AMP_DOCS_REVIEW.md  BENCHMARKS.md  COMPETITIVE_ANALYSIS.md  COMPETITIVE_ANALYSIS_EXTENDED.md  DESIGN_APPENDER_BULK_LOADING.md  DIALECT_AUTODETECTION.md  IDEAS.md  INTEGRATION_OPPORTUNITIES.md  INTEGRATION_ROADMAP_MASTER.md  MERGE_FEATURE.md  ROADMAP.md  SAMPLE_FEATURE.md  TEST_DATA_GENERATOR.md
docs/archived/: AMP_DOCS_REVIEW.md  COMPETITIVE_ANALYSIS.md  CONVERT_FEASIBILITY.md  CONVERT_GAP_ANALYSIS.md  DESIGN_APPENDER_BULK_LOADING.md  DIALECT_AUTODETECTION.md  DIFF_FEATURE.md  DIFF_IMPLEMENTATION_PLAN.md  DUCKDB_QUERY_FEASIBILITY.md  GRAPH_FEATURE.md  IDEAS.md  MERGE_FEATURE.md  MSSQL_FEASIBILITY.md  QUERY_FEATURE.md  REDACT_FEATURE.md  REDACT_IMPLEMENTATION_PLAN.md  ROADMAP_REVIEW.md  SAMPLE_FEATURE.md  SHARD_FEATURE.md  TEST_FILE_EXTRACTION.md
docs/features/: ADAPTIVE_IO_PROFILES.md  ADDITIONAL_IDEAS.md  ATLAS_INTEGRATION_DEEP_DIVE.md  CONVERT_GAP_ANALYSIS.md  DBML_SUPPORT.md  DBT_INTEGRATION_DEEP_DIVE.md  DIFF_FEATURE.md  DUCKDB_INTEGRATION_DEEP_DIVE.md  ENUM_CONVERSION.md  GRAPH_FEATURE.md  GREAT_EXPECTATIONS_INTEGRATION_DEEP_DIVE.md  IDEAS.md  MERGE_FEATURE.md  MIGRATE_FEATURE.md  MORPHABLE_OWNERSHIP_SUPPORT.md  MSSQL_FEASIBILITY.md  PARALLEL_ALL_COMMANDS_ANALYSIS.md  PARALLEL_ANALYZE_DEEP_DIVE.md  PARALLEL_PROCESSING.md  REDACT_FEATURE.md  SAMPLE_FEATURE.md  SCHEMA_INFERENCE.md  SHARD_FEATURE.md  TEST_FILE_EXTRACTION.md
docs/generate/: README.md  diagnostics.md  generators.md  (+5 more)
examples/: generate-man.rs
schemas/: analyze.schema.json  convert.schema.json  generate-config.schema.json  graph.schema.json  merge.schema.json  redact.schema.json  sample.schema.json  shard.schema.json  split.schema.json  validate.schema.json
scripts/: bench-validate-memory.sh  benchmark-all.sh  benchmark-competitors.sh  benchmark-generate.sh  benchmark.sh  gen-test-dumps.sh  generate-test-dump.py  install-completions.sh  install-man.sh  profile-memory.sh  smoke-test-generate.sh  verify-io-profiles.sh  verify-io-strategies.sh  verify-realworld.sh
src/: archive.rs  copy_data.rs  diagnostic.rs  fake_data.rs  json_schema.rs  lib.rs  main.rs  man.rs  pk.rs  progress.rs  transform_common.rs  zip_input.rs
tests/: adaptive_io_regression_test.rs  adaptive_io_test.rs  analyzer_unit_test.rs  bugs_regression_test.rs  cli_help_test.rs  cmd_unit_test.rs  convert_integration_test.rs  convert_unit_test.rs  diff_enhanced_test.rs  diff_integration_test.rs  differ_unit_test.rs  duckdb_test.rs  fixture_migration_test.rs  generate_api_test.rs  generate_cli_test.rs  generate_compiler_test.rs  generate_config_test.rs  generate_docs_test.rs  generate_engine_test.rs  generate_filter_test.rs  generate_fixtures_test.rs  generate_output_test.rs  generate_planner_test.rs  generate_profile_test.rs  generate_verify_test.rs  glob_pattern_test.rs  graph_integration_test.rs  io_profile_test.rs  io_strategy_test.rs  json_output_test.rs  json_schema_tests.rs  merger_unit_test.rs  mssql_integration_test.rs  parser_edge_cases_test.rs  parser_memory_test.rs  parser_unit_test.rs  pk_unit_test.rs  realworld.rs  redact_test.rs  sample_integration_test.rs  (+10 more)
website/: .env.example  .gitignore  ACCESSIBILITY_AUDIT.md  WEBSITE_IMPROVEMENTS.md  astro.config.mjs  generate-og-image.js  index.html  llms.txt  og-image.html  package-lock.json  package.json  playwright.config.ts  style.css  test-theme.ts  tsconfig.json  vercel.json
(+299 files in other folders)
