[package]
name = "sql-splitter"
version = "1.0.0"
edition = "2021"
authors = ["Helge Sverre <helge.sverre@gmail.com>"]
description = "High-performance CLI tool for splitting large SQL dump files into individual table files"
license = "MIT"
repository = "https://github.com/helgesverre/sql-splitter"
keywords = ["sql", "mysql", "dump", "split", "cli"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "sql-splitter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
regex = "1"
memchr = "2"
once_cell = "1"
ahash = "0.8"
anyhow = "1"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "writer_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
incremental = false
strip = true
