[workspace]
members = [".", "crates/test_data_gen"]
resolver = "2"

[package]
name = "sql-splitter"
version = "1.12.6"
edition = "2021"
authors = ["Helge Sverre <helge.sverre@gmail.com>"]
description = "High-performance CLI tool for splitting large SQL dump files into individual table files"
license = "MIT"
repository = "https://github.com/helgesverre/sql-splitter"
keywords = ["sql", "mysql", "dump", "split", "cli"]
categories = ["command-line-utilities", "database"]

[[bin]]
name = "sql-splitter"
path = "src/main.rs"

[dependencies]
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
glob = "0.3"
regex = "1"
memchr = "2"
once_cell = "1"
ahash = "0.8"
anyhow = "1"
flate2 = "1"
bzip2 = "0.5"
xz2 = "0.1"
zstd = "0.13"
indicatif = "0.18"
rand = "0.9"
smallvec = { version = "1.13", features = ["union"] }
chrono = "0.4"
tempfile = "3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
fake = { version = "4.4", features = ["derive"] }
sha2 = "0.10"
hex = "0.4"
duckdb = { version = "1.4", features = ["bundled"] }
dirs = "6"
rustyline = "17"

[dev-dependencies]
criterion = { version = "0.8", features = ["html_reports"] }
tempfile = "3"
test_data_gen = { path = "crates/test_data_gen" }

[dev-dependencies.clap_mangen]
version = "0.2"

[[bench]]
name = "parser_bench"
harness = false

[[bench]]
name = "writer_bench"
harness = false

[[bench]]
name = "e2e_bench"
harness = false

[[bench]]
name = "convert_bench"
harness = false

[[bench]]
name = "redact_bench"
harness = false

[[bench]]
name = "sample_bench"
harness = false

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
panic = "abort"
debug = false
incremental = false
strip = true

# Profile for flamegraph/samply profiling (release + debug symbols)
[profile.profiling]
inherits = "release"
debug = true
strip = false
