[package]
name = "test_data_gen"
version = "0.1.0"
edition = "2021"
description = "Deterministic test data generator for sql-splitter integration tests"
license = "MIT"
publish = false

[[bin]]
name = "gen-fixtures"
path = "src/bin/main.rs"

[dependencies]
rand = "0.9"
rand_chacha = "0.9"
chrono = { version = "0.4", default-features = false, features = ["std"] }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
